Add script to generate vault config from the template using .env vars

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint": "eslint src tests",
     "test": "nightwatch",
     "vault": "npm run vault:start && echo 'Unseal by running `npm run vault:unseal` or in browser: http://localhost:8200/'",
+    "vault:config": ". .env && eval \"echo \\\"$(sed 's/\"/\\\\\"/g' ./vault/config.template.hcl)\\\"\" > ./vault/config.hcl",
     "vault:start": "vault server -config ./vault/config.hcl >> vault.log 2>&1 &",
     "vault:unseal": "echo 'You can also unseal in browser: http://localhost:8200/' && vault operator unseal",
     "vault:stop": "cat vault.pid | xargs kill",
