Use env variables in npm scripts

--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "scripts": {
     "eslint": "eslint src tests",
     "test": "nightwatch",
-    "vault": "npm run vault:start && echo 'Unseal by running `npm run vault:unseal` or in browser: http://localhost:8200/'",
+    "vault": "npm run vault:start && echo \"Unseal by running `npm run vault:unseal` or in browser: $VAULT_ADDR\"",
     "vault:config": ". .env && eval \"echo \\\"$(sed 's/\"/\\\\\"/g' ./vault/config.template.hcl)\\\"\" > ./vault/config.hcl",
     "vault:start": "vault server -config ./vault/config.hcl >> vault.log 2>&1 &",
-    "vault:unseal": "echo 'You can also unseal in browser: http://localhost:8200/' && vault operator unseal",
+    "vault:unseal": "echo \"You can also unseal in browser: $VAULT_ADDR\" && vault operator unseal",
     "vault:stop": "cat vault.pid | xargs kill",
-    "vault:generate:token": "vault token create -no-default-policy -policy=unwrap-only -ttl=10s -use-limit=1 -format=json > /tmp/.vault-token.json",
-    "vault:generate:wrapToken": "vault kv get -wrap-ttl=10s -format=json secret/janci/statement-downloader > /tmp/.unwrap-token.json",
+    "vault:generate:token": "vault token create -no-default-policy -policy=unwrap-only -ttl=10s -use-limit=1 -format=json > $VAULT_TOKEN_FILE",
+    "vault:generate:wrapToken": "vault kv get -wrap-ttl=10s -format=json secret/janci/statement-downloader > $UNWRAP_TOKEN_FILE",
     "vault:login": "vault login -field=policies",
     "vault:logout": "rm ~/.vault-token",
-    "cleanup": "rm /tmp/.vault-token.json && rm /tmp/.unwrap-token.json",
+    "cleanup": ". .env && rm -v $VAULT_TOKEN_FILE $UNWRAP_TOKEN_FILE",
     "start": "npm run vault:login && npm run vault:generate:token && npm run vault:generate:wrapToken && npm run vault:logout && nightwatch && npm run cleanup && npm run chrome:zombies:kill",
     "chrome:zombies": "npm run chrome:zombies:find --silent || echo 'No zombie chromedrive processes found'",
     "chrome:zombies:find": "ps auxw|grep '/statements-downloader/node_modules/chromedriver' | grep -v grep",
