Load .env for relevant npm scripts

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "vault:unseal": "echo \"You can also unseal in browser: $VAULT_ADDR\" && vault operator unseal",
     "vault:seal": "vault operator seal",
     "vault:stop": "cat vault.pid | xargs kill",
-    "vault:generate:token": "vault token create -no-default-policy -policy=unwrap-only -ttl=10s -use-limit=1 -format=json > $VAULT_TOKEN_FILE",
-    "vault:generate:wrap-token": "vault kv get -wrap-ttl=10s -format=json $VAULT_SECRET_PATH > $UNWRAP_TOKEN_FILE",
+    "vault:generate:token": ". .env && vault token create -no-default-policy -policy=unwrap-only -ttl=10s -use-limit=1 -format=json > $VAULT_TOKEN_FILE",
+    "vault:generate:wrap-token": ". .env && vault kv get -wrap-ttl=10s -format=json $VAULT_SECRET_PATH > $UNWRAP_TOKEN_FILE",
     "vault:login": "vault login -field=policies",
     "vault:logout": "rm ~/.vault-token",
     "cleanup": ". .env && rm -v $VAULT_TOKEN_FILE $UNWRAP_TOKEN_FILE",
