--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automatically download regular statements",
   "main": "index.js",
   "scripts": {
-    "eslint": "eslint src tests",
+    "lint": "eslint nightwatch.conf.js src",
     "test": "nightwatch",
     "vault": "npm run vault:config && npm run vault:start && echo \"Vault server started. Unseal by running 'npm run vault:unseal', 'vault operator unseal' or in browser: $VAULT_ADDR\"",
     "vault:config": ". .env && eval \"echo \\\"$(sed 's/\"/\\\\\"/g' ./vault/config.template.hcl)\\\"\" > ./vault/config.hcl",
